<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EnquiryActivity"
    tools:showIn="@layout/activity_enquiry"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFullName"
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_name_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAge"
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age_hint"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/first"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/radioGroupGender"
            >
                <RadioButton
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MyCustomRadioButton"
                    android:buttonTint="@color/white"
                    android:text="@string/radio_btn_male"
                    />
                <RadioButton
                    android:id="@+id/second"
                    android:buttonTint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MyCustomRadioButton"
                    android:layout_marginStart="20dp"
                    android:text="@string/radio_btn_female"/>
        </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <AutoCompleteTextView
                    android:id="@+id/act1"
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_btn_hint"
                    android:maxLines="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionDone"
                    android:drawableRight="@drawable/select_drop_down_ic"
                    />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSend"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/centre_button"
                android:text="@string/submit_btn_hint"
                android:textColor="@color/whiteTextColor" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.core.widget.NestedScrollView>